--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^11.0.3",
+    "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "lucide-react": "^0.312.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
